SERVER-48068 Fix handling of program registry and wait_for_pid in mongo shell