src/mongo/shell/shell_utils_launcher.h
@@ -94,12 +94,25 @@ public:
     void unregisterProgram(ProcessId pid);
 
     bool isPidRegistered(ProcessId pid) const;
+    /** platform-agnostic wrapper around waitpid that automatically cleans up
+     * the program registry
+     * @param pid the processid
+     * @param block if true, block the thread until the child has exited
+     * @param exit_code[out] if set, and an exit code is available, the code will be stored here
+     * @return true if the process has exited, false otherwise */
+    bool waitForPid(const ProcessId pid, const bool block, int* const exit_code = nullptr);
+    /** check if a child process is alive. Never blocks
+     * @param pid the processid
+     * @param exit_code[out] if set, and an exit code is available, the code will be stored here
+     * @return true if the process has exited, false otherwise */
+    bool isPidDead(const ProcessId pids, int* const exit_code = nullptr);
     void getRegisteredPorts(std::vector<int>& ports);
     void getRegisteredPids(std::vector<ProcessId>& pids);
 
 private:
     stdx::unordered_set<ProcessId> _registeredPids;
     stdx::unordered_map<int, ProcessId> _portToPidMap;
+    stdx::unordered_map<ProcessId, int> _pidToExitCode;
     stdx::unordered_map<ProcessId, stdx::thread> _outputReaderThreads;
     mutable stdx::recursive_mutex _mutex;
 
